Re-implement component serialization & remove XStream